Updating source code

--- a/Portfolio Project/index.html
+++ b/Portfolio Project/index.html
@@ -261,14 +261,14 @@
 
     <form action="#" name="submit-to-google-sheet">
         <div class="input-box">
-            <input type="text" name="Name"placeholder="Full Name">
-            <input type="email" name="Email" placeholder="Email Address">
+            <input type="text" name="Name"placeholder="Full Name" required>
+            <input type="email" name="Email" placeholder="Email Address" required>
         </div>
         <div class="input-box">
-            <input type="number" name="Contact"placeholder="Contact Number">
-            <input type="Text" name="Subject" placeholder="Email Subject">
+            <input type="number" name="Contact"placeholder="Contact Number" required>
+            <input type="Text" name="Subject" placeholder="Email Subject" required>
         </div>
-        <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <input type="submit" value="Send Message" class="btn">
     </form>
     <span id="msg"></span>
